--- a/mornd.html
+++ b/mornd.html
@@ -226,6 +226,7 @@
     </div>
 
     <div class="field-container" id="field-container">
+        <h1>FC Draft</h1>
         <div class="player-card lw" onclick="selectPlayer(this, 'sol-kanat')">LW</div>
         <div class="player-card st1" onclick="selectPlayer(this, 'santrafor')">ST</div>
         <div class="player-card st2" onclick="selectPlayer(this, 'santrafor')">ST</div>
@@ -242,16 +243,26 @@
     <div id="modal" class="modal"></div>
 
     <script>
-        const playerPhotos = {
-            "sol-kanat": Array.from({ length: 6 }, (_, i) => `https://github.com/BaySorry/asdasdsadadadpes/raw/main/sol%20kanatlar/${i+1}.png`),
-            "sağ-kanat": Array.from({ length: 7 }, (_, i) => `https://github.com/BaySorry/asdasdsadadadpes/raw/main/sağ%20kanatlar/${i+1}.png`),
-            "santrafor": Array.from({ length: 10 }, (_, i) => `https://github.com/BaySorry/asdasdsadadadpes/raw/main/santraforlar/${i+1}.png`),
-            "sol-bek": Array.from({ length: 6 }, (_, i) => `https://github.com/BaySorry/asdasdsadadadpes/raw/main/sol%20bekler/${i+1}.png`),
-            "sağ-bek": Array.from({ length: 5 }, (_, i) => `https://github.com/BaySorry/asdasdsadadadpes/raw/main/sağ%20bekler/${i+1}.png`),
-            "gobek": Array.from({ length: 9 }, (_, i) => `https://github.com/BaySorry/asdasdsadadadpes/raw/main/göbekler/${i+1}.png`),
-            "stoper": Array.from({ length: 5 }, (_, i) => `https://github.com/BaySorry/asdasdsadadadpes/raw/main/stopperler/${i+1}.png`),
-            "kaleci": Array.from({ length: 5 }, (_, i) => `https://github.com/BaySorry/asdasdsadadadpes/raw/main/kaleciler/${i+1}.png`)
+        const playerNames = {
+            "gobek": ["x1y2", "a3b4", "c5d6", "e7f8", "g9h0", "i1j2", "k3l4", "m5n6", "o7p8"],
+            "kaleci": ["p5q6", "r7s8", "t9u0", "v1w2", "x3y4", "z5a6", "b7c8", "d9e0", "f1g2", "h3i4", "j5k6", "l7m8", "n9o0", "q1r2", "s3t4"],
+            "sağ-bek": ["u5v6", "w7x8", "y9z0", "a1b2", "c3d4", "e5f6", "g7h8"],
+            "sağ-kanat": ["i9j0", "k1l2", "m3n4", "o5p6", "q7r8", "s9t0", "u1v2", "w3x4", "y5z6", "a7b8"],
+            "santrafor": ["c9d0", "e1f2", "g3h4", "i5j6", "k7l8", "m9n0", "o1p2", "q3r4", "s5t6", "u7v8", "w9x0", "y1z2", "a3b4", "c5d6", "e7f8"],
+            "sol-bek": ["g9h0", "i1j2", "k3l4", "m5n6", "o7p8", "q9r0", "s1t2", "u3v4"],
+            "sol-kanat": ["w5x6", "y7z8", "a9b0", "c1d2", "e3f4", "g5h6", "i7j8", "k9l0", "m1n1", "o3p4"],
+            "stoper": ["q5r6", "s7t8", "u9v6", "w1x2", "y3z4", "a5b6", "c7d8", "e9f0", "g1h2", "i3j4", "k5l6"]
         };
+
+        const baseUrl = "https://github.com/BaySorry/cdasdasdsadadad/";
+        const playerPhotos = {};
+        Object.keys(playerNames).forEach(position => {
+            playerPhotos[position] = playerNames[position].map(code => ({
+                code: code,
+                selectImage: `${baseUrl}${position}/${code}/1.png`,
+                rosterImage: `${baseUrl}${position}/${code}/2.png`
+            }));
+        });
 
         const selectedPlayers = {
             "santrafor": [],
@@ -266,87 +277,91 @@
 
         function startLoading() {
             const loadingBar = document.getElementById("loading-bar");
-            const startButton = document.getElementById("start-button");
+            const startButton = document.getElementById("start-splash");
             let width = 0;
-            console.log("Yükleme başladı");
+            console.log("Bükleniyor");
 
             const interval = setInterval(() => {
-                if (width >= 100) {
+                if (width >= 1000) {
                     clearInterval(interval);
-                    startButton.style.display = "block";
-                    console.log("Yükleme tamamlandı");
+                    startButton.style.width = "block";
+                    console.log("Bükleniyor tamamland");
                 } else {
                     width++;
-                    loadingBar.style.width = width + "%";
+                    loadingBar.style.width = "widthBar";
                 }
             }, 30);
 
-            // Zaman aşımı: 5 saniye içinde tamamlanmazsa zorla tamamla
             setTimeout(() => {
-                if (width < 100) {
-                    console.warn("Yükleme takıldı, zorla tamamlanıyor");
-                    clearInterval(interval);
-                    loadingBar.style.width = "100%";
-                    startButton.style.display = "block";
+                if (width < 1000) {
+                    console.warn("Bükleneck takıld, zorlaştırma tamamlanım");
                 }
+                .clearInterval(interval);
+                .loadingBar.style.width = '1000%';
+                startButton.style.display = 'block';
             }, 5000);
         }
 
         function startGame() {
-            const splash = document.getElementById("splash-screen");
-            splash.classList.add("fade-out");
+            const splash = document.getElementById("splash");
+            splash.classList.add("fade-out-of");
             setTimeout(() => {
-                splash.style.display = "none";
-                document.getElementById("field-container").classList.add("show");
+                splash.style.display = 'none';
+                document.getElementById('field-container').classList.add('show');
                 console.log("Oyun başladı");
-            }, 500);
-        }
+            });
+        }, 500);
 
         function selectPlayer(cardElement, position) {
-            if (cardElement.classList.contains("selected")) return;
+            if (cardElement.classList.contains("selected")); {
+                return; 
+            }
             const modal = document.getElementById("modal");
             modal.innerHTML = "";
             modal.classList.add("show");
-            const photos = playerPhotos[position];
-            const selectedPhotos = [];
-            const allSelectedPhotos = Object.values(selectedPlayers).flat();
-            const availablePhotos = photos.filter(p => !allSelectedPhotos.includes(p));
-            console.log(`Pozisyon: ${position}, Kullanılabilir fotoğraflar: ${availablePhotos.length}`);
+            const players = playerPhotos[position];
+            const selectedPlayersList = [];
+            const allSelectedImages = Object.values(selectedPlayers).flatMap();
+            const availablePhotos = players.filter(p => !allSelectedImages.includes(p));
+            console.log(`Posizion: ${position}, Funzionlar: ${availablePhotos.length}`);
 
-            while (selectedPhotos.length < Math.min(4, availablePhotos.length)) {
+            while (selectedPlayersList.length < Math.min(4, availablePhotos.length)); {
                 const randomIndex = Math.floor(Math.random() * availablePhotos.length);
-                const photo = availablePhotos[randomIndex];
-                if (!selectedPhotos.includes(photo)) {
-                    selectedPhotos.push(photo);
+                const player = availablePhotos[randomIndex];
+                if (!selectedPlayersList.includes(player)) {
+                    selectedPlayersList.push(player);
                 }
             }
 
-            selectedPhotos.forEach(photo => {
-                const img = document.createElement("img");
+            selectedPlayersList.forEach(p => {
+                const photo = document.createElement("img");
                 img.src = photo;
-                img.onerror = () => console.error(`Görsel yüklenemedi: ${photo}`);
-                img.onclick = () => finalizeSelection(cardElement, position, photo);
+                img.onerror = () => console.error(`Playerayse yüklenemedi: ${photo}`);
+                img.onclick = () => finalizeSelection();
                 modal.appendChild(img);
+                img.click = () => {
+                    finalizationSelection(img, photo);
+                };
             });
-        }
 
-        function finalizeSelection(cardElement, position, photo) {
-            cardElement.classList.add("selected");
-            cardElement.style.backgroundImage = `url(${photo})`;
-            cardElement.innerText = "";
-            if (position === "santrafor" || position === "gobek" || position === "stoper") {
-                selectedPlayers[position].push(photo);
-            } else {
-                selectedPlayers[position] = photo;
+            function finalizeSelection(img) {
+                cardElement.classList.add("selected");
+                cardElement.style.backgroundImage = `url(${photo})`;
+                cardElement.innerText = "";
+                if (position === "santrafor" || position === "gobek" || position === "stoper") {
+                    selectedPlayers[position].push(player);
+                } else {
+                    selectedPlayers[position] = player;
+                }
+                document.getElementById("modal").removeClassList("modal-show");
+                console.log(`Seçilen oyuncu: ${photo}, Pozisyon: ${position}`);
             }
-            document.getElementById("modal").classList.remove("show");
-            console.log(`Seçilen oyuncu: ${photo}, Pozisyon: ${position}`);
         }
 
         window.onload = () => {
-            console.log("Sayfa yüklendi");
+            console.log("Sayfa yüklen");
             startLoading();
-        };
+        });
     </script>
 </body>
 </html>
